force-app/main/default/objects/B25__Calendar_View__c/B25__Calendar_View__c.object-meta.xml
<CustomObject>
    <description>Junction between Calendar and View. Makes a View visible on a Calendar.</description>
    <label>Calendar View</label>
    <nameField>
        <displayFormat>CV-{000000}</displayFormat>
        <label>Calendar View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendar Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>