force-app/main/default/objects/B25__Calendar_View__c/fields/B25__Button_Order__c.field-meta.xml
<CustomField>
    <fullName>B25__Button_Order__c</fullName>
    <description>Defines where the button for this View is displayed on the Calendar. Lower = to the left; Higher = to the right.</description>
    <inlineHelpText>Définit l’endroit où le bouton de cette vue est affiché sur le calendrier. Plus bas = à gauche ; Plus haut = à droite.</inlineHelpText>
    <label>Button Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>