force-app/main/default/objects/B25__Calendar_View__c/fields/B25__Calendar__c.field-meta.xml
<CustomField>
    <fullName>B25__Calendar__c</fullName>
    <description>The Calendar record to which this Calendar View record belongs.</description>
    <inlineHelpText>L’enregistrement du calendrier auquel appartient cette vue du calendrier.</inlineHelpText>
    <label>Calendar</label>
    <referenceTo>B25__Calendar__c</referenceTo>
    <relationshipLabel>Calendar Views</relationshipLabel>
    <relationshipName>Calendar_Views</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>