force-app/main/default/objects/B25__Calendar_View__c/fields/B25__Default_View__c.field-meta.xml
<CustomField>
    <fullName>B25__Default_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that the linked View is the default View for the linked Calendar. Each Calendar can only have one default View, meaning only one Calendar View can be marked as the default.</description>
    <inlineHelpText>Cela indique que la vue connexe est la vue par défaut pour le calendrier connexe. Chaque calendrier ne peut avoir qu’une seule vue par défaut, ce qui signifie qu’une seule vue de calendrier peut être marquée comme étant la vue par défaut.</inlineHelpText>
    <label>Default View</label>
    <type>Checkbox</type>
</CustomField>