force-app/main/default/objects/B25__Calendar_View__c/fields/B25__View__c.field-meta.xml
<CustomField>
    <fullName>B25__View__c</fullName>
    <description>The View record to which this Calendar View record belongs.</description>
    <inlineHelpText>L’enregistrement de la vue auquel appartient cette vue du calendrier.</inlineHelpText>
    <label>View</label>
    <referenceTo>B25__View__c</referenceTo>
    <relationshipLabel>Calendar Views</relationshipLabel>
    <relationshipName>Calendar_Views</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>